# alibi

./: .env.example  .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.telegram  LICENSE  README.md  docker-compose.telegram.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alibi/: __init__.py  backup.py  cli.py  config.py  errors.py  export.py  health.py  i18n.py  retention.py
alibi/analytics/: __init__.py  anomalies.py  cloud_quality.py  corrections.py  location.py  nutrition.py  patterns.py  price_factors.py  spending.py  subscriptions.py  vendors.py
alibi/annotations/: __init__.py  store.py
alibi/anonymization/: __init__.py  exporter.py
alibi/api/: __init__.py  app.py  deps.py  middleware.py
alibi/atoms/: __init__.py  parser.py
alibi/auth/: __init__.py  keys.py
alibi/budgets/: __init__.py  merge.py  models.py  service.py
alibi/clouds/: __init__.py  collapse.py  correction.py  dedup.py  formation.py  learning.py
alibi/commands/: __init__.py  analytics.py  corrections.py  enrich.py  facts.py  fx.py  items.py  maintenance.py  misc.py  process.py  shared.py  users.py  yaml_ops.py
alibi/daemon/: __init__.py  handlers.py  scheduler.py  watcher_service.py
alibi/db/: baseline_v1.sql  connection.py  item_stars.py  migrate.py  models.py  schema.sql  v2_store.py
alibi/distribution/: __init__.py  formatters.py  forms.py  renderer.py
alibi/enrichment/: __init__.py  _batch.py  attributes.py  barcode_matcher.py  categorize.py  cloud_enrichment.py  coherence_audit.py  combined.py  comparable_name_clusters.py  comparable_names.py  comparable_prices.py  coverage.py  gemini_enrichment.py  gs1_client.py  llm_enrichment.py  off_client.py  product_matcher.py  product_resolver.py  product_state.py  service.py  taxonomy.py  units.py  upcitemdb_client.py
alibi/extraction/: __init__.py  barcode_detector.py  doctr_ocr.py  gemini_structurer.py  gemini_verifier.py  historical.py  item_verifier.py  micro_prompts.py  ocr.py  pdf.py  prompts.py  schemas.py  structurer.py  template_bootstrapper.py  templates.py  text_parser.py  verification.py  vision.py  yaml_cache.py
alibi/identities/: __init__.py  matching.py  store.py
alibi/ingestion/: __init__.py  csv_parser.py  importer.py  ofx_parser.py
alibi/maintenance/: learning_aggregation.py
alibi/masking/: __init__.py  policies.py  service.py
alibi/matching/: __init__.py  duplicates.py  transactions.py
alibi/mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
alibi/mycelium/: __init__.py  notes.py  sync.py  watcher.py  yaml_versioning.py
alibi/normalizers/: __init__.py  currency.py  dates.py  fields.py  jurisdiction.py  language.py  numbers.py  tax.py  units.py  vendors.py
alibi/obsidian/: __init__.py  notes.py
alibi/predictions/: __init__.py  category.py  client.py  spending.py
alibi/processing/: __init__.py  config_loader.py  folder_router.py  image_optimizer.py  pipeline.py  watcher.py
configs/: subagents.json
data/: README.md  unit_aliases.example.yaml  vendor_aliases.example.yaml
datasette/: metadata.yaml
docker/: run-telegram-bot.sh  telegram-requirements.txt
docs/: ARCHITECTURE.md  DASHBOARD_GUIDE.md  DATASETTE_EXPLORER.md  ITEM_MODEL_ROADMAP.md  SCHEMA.md  SEARCH_AS_CODE.md
research/: EXTRACTION_RESEARCH_REPORT.md
scripts/: apply_records_audit_20260609.py  apply_review_sheet.py  backfill_comparable_price.py  backfill_jurisdiction.py  backfill_vendor_keys.py  batch_process_corpus.py  benchmark_qwen35.py  benchmark_qwen35_v2.py  benchmark_structure_model.py  compare_models.py  corpus_report.py  datasette_refresh.sh  datasette_snapshot.sh  dedup_facts.py  generate_schema.py  make_review_sheet.py  ocr_ab_test.py  run-datasette.sh
tests/: __init__.py  conftest.py  ground_truth.py  test_adaptive_learning.py  test_analytics_anomalies.py  test_analytics_export.py  test_analytics_patterns.py  test_anonymization.py  test_api.py  test_api_analytics.py  test_api_annotations.py  test_api_auth_integration.py  test_api_identities.py  test_api_process.py  test_api_reconciliation.py  test_api_users.py  test_atom_parser.py  test_attribute_enrichment.py  test_auth_keys.py  test_auto_migrate_on_open.py  test_backup.py  test_barcode_cascade.py  test_barcode_detector.py  test_barcode_matcher.py  test_barcode_prefix.py  test_budgets.py  test_canonical_comparable_name.py  test_canonical_unit_quantity.py  test_canonical_vendor_key.py  test_card_slip_detection.py  test_cli_integration.py  test_cloud_formation.py  test_cloud_learning.py  test_cloud_quality.py  test_coherence_audit.py  test_collapse_clean_name.py  test_collapse_dedup.py  test_combined_enrichment.py  test_comparable_name_clusters.py  test_comparable_name_enrichment.py  (+144 more)
(+194 files in other folders)
